@@ -6,6 +6,7 @@
 	* Fixed Bug #584807: 'Regex makes startup and requests extremely slow'.
 	* Fixed Bug #594439: 'escape_value and unescape_value are slow'.
 	* Fixed Bug #585528: 'Move the server and app to separate processes'.
+	* Fixed Bug #597053: 'Failed builds should show in the browser'.
 
 2010-03-02 Release 0.4.0
 	* Fixed bug #511025: 'Controller template uses wrong view on create fail'.
